deploy/minikube/accounts-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-db-deployment
spec:
  selector:
    matchLabels:
      app: accounts-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: accounts-db
    spec:
      containers:
      - image: mysql:latest
        name: accounts-db
        ports:
        - containerPort: 3306
        volumeMounts:
            - name: accounts-db-init
              mountPath: /docker-entrypoint-initdb.d
            - mountPath: "/var/lib/mysql"
              subPath: "mysql"
              name: accounts-db-disk
      volumes:
        - name: accounts-db-init
          configMap:
            name: accounts-db-init-config
        - name: accounts-db-disk
          persistentVolumeClaim:
            claimName: accounts-db-disk
---
apiVersion: v1
kind: Service
metadata:
  name: accounts-db-service
spec:
  type: ClusterIP
  selector:
    app: accounts-db
  ports:
  - port: 3306
    targetPort: 3306
