deploy/minikube/keycloak-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-db-deployment
spec:
  selector:
    matchLabels:
      app: keycloak-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: keycloak-db
    spec:
      containers:
      - image: postgres
        name: keycloak-db
        ports:
        - containerPort: 5432
        volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: keycloak-db-disk
      volumes:
        - name: keycloak-db-disk
          persistentVolumeClaim:
            claimName: keycloak-db-disk
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-db-service
spec:
  type: ClusterIP
  selector:
    app: keycloak-db
  ports:
  - port: 5432
    targetPort: 5432
