deploy/minikube/users-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-db-deployment
spec:
  selector:
    matchLabels:
      app: users-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: users-db
    spec:
      containers:
      - image: mysql
        name: users-db
        ports:
        - containerPort: 3306
        volumeMounts:
            - name: users-db-init
              mountPath: /docker-entrypoint-initdb.d
            - mountPath: "/var/lib/mysql"
              subPath: "mysql"
              name: users-db-disk
      volumes:
        - name: users-db-init
          configMap:
            name: users-db-init-config
        - name: users-db-disk
          persistentVolumeClaim:
            claimName: users-db-disk
---
apiVersion: v1
kind: Service
metadata:
  name: users-db-service
spec:
  type: ClusterIP
  selector:
    app: users-db
  ports:
  - port: 3306
    targetPort: 3306
