deploy/minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/auth
        pathType: Prefix
        backend:
          service:
            name: users-api-service
            port:
              number: 80
      - path: /api/v1/users
        pathType: Prefix
        backend:
          service:
            name: users-api-service
            port:
              number: 80
      - path: /api/v1/accounts
        pathType: Prefix
        backend:
          service:
            name: accounts-api-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-service
            port:
              number: 80
